--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             line-height: 19px;
             text-align: center;
             white-space: nowrap;
-            margin: 20px;
+            margin: 0px;
         }
 
 
@@ -618,7 +618,7 @@
 
         <h4>PRODUKTE. FASHION. PORTRAITS.</h4>
         
-        <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
+        <p class="info">📷 Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
@@ -626,7 +626,7 @@
 
         <h4>E-COMMERCE. PORTALE. PRINT.</h4>
 
-        <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
+        <p class="info">📷 Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
             Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie.</p>
 
@@ -667,9 +667,7 @@
 
 <div class="topline"></div>
 
-
-📷 
-<a class="link" href="imprint.html" target="_blank">Impressum</a> 
+<a class="link" href="imprint.html" target="_blank">Impressum</a> | 
 <p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
    
 <div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
