--- a/index.html
+++ b/index.html
@@ -667,8 +667,10 @@
 
 <div class="topline"></div>
 
-<a class="link" href="imprint.html" target="_blank">Impressum</a> | 
+
 <p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
+ | 
+<a class="link" style="padding:10px;" href="imprint.html" target="_blank">Impressum</a>
    
 <div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
