--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 
 <p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
  | 
-<a class="link" style="padding:10px;" href="imprint.html" target="_blank">Impressum</a>
+<a class="link" style="padding:10px 0;" href="imprint.html" target="_blank">Impressum</a>
    
 <div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
