--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         a {
             font-size:13px;
             text-decoration: none;
+            color: #58595b;
         }
 
         h2, h3, h4 {
