--- a/imprint.html
+++ b/imprint.html
@@ -16,150 +16,11 @@
     
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet">
     <meta charset="utf-8"/>
-    <style>
-        p, a {
-            color: #000;
-            font-family: Helvetica, sans-serif;
-            font-size: 12px;
-            line-height: 14px;
-            letter-spacing: .8px;
-        }
-
-        p {
-            margin: 5px; 
-            text-align: justify;
-        }
-        a {
-            font-size:13px;
-        }
-
-        h1, h2, h3, h4 {
-            font-family: Lato, Helvetica-Neue, sans-serif;
-        }
-
-        h1 { font-size: 26px; }
-        h2 { font-size: 24px; }
-        h3 { font-size: 20px; }
-        h4 { font-size: 16px; }
-
-        .widetext {
-            letter-spacing: 16px;
-            margin: 8px;
-        }
-
-        h2.widetext {
-            margin-top: 12px;
-        }
-
-
-        .headline {
-            margin: 0 0 30px 0;
-            text-align: left;
-            text-transform: uppercase;
-            font-size: 20px;
-            border-bottom: 1px solid #000;
-            border-top: 1px solid #000;
-            padding: 15px 0;
-        }
-
-        .headline span::before, .headline span::after {
-            border-bottom: 1px solid #000000;
-            content: '';
-            position: absolute;
-            bottom: 50%;
-            width: 100%;
-        }
-
-
-        .button {
-            background: #000;
-            display: inline-block;
-            padding: 7px 10px;
-            border: 0;
-            color: #FFFFFF;
-            font-size: 14px;
-            font-weight: normal;
-            font-family: 'Josefin Sans', sans-serif;
-            line-height: 19px;
-            text-align: center;
-            text-transform: uppercase;
-            vertical-align: middle;
-            white-space: nowrap;
-            text-decoration: none;
-            padding-top: 9px;
-            margin:20px;
-        }
-
-
-
-        .body {
-            margin: 0;
-            padding: 0;
-            text-align: left;
-            background-color: #fff;
-        }
-
-        .topnav {
-            margin-top: 30px;
-        }
-
-        .subnav {
-            border-top: 1px solid #dbdbdb;
-        }
-
-        img.header {
-            width: 100%;
-            min-width: 220px;
-            max-width: 220px;
-            margin-bottom: 10px;
-        }
-
-        img.img-block {
-            width: 100%;
-            max-width: 600px;
-            min-width: 320px;
-        }
-
-        .block-separator {
-            margin: 5px;
-        }
-
-        /* LAYOUT */
-
-        .wrapper {
-            max-width: 800px;
-            margin: auto;
-        }
-
-        .block {
-            margin: 3px;
-            margin-bottom: 50px;
-            overflow: auto;
-        }
-
-        .white {
-            color: white;
-        }
-
-        .bgblack {
-            background-color: #000;
-        }
-
-        .two {
-            width: 40%;
-        }
-
-        li {
-            display: inline; /* li nebeneinander anzeigen */
-            list-style-type: none; /* ohne Aufzählungspunkte */
-        }
-    </style>
+    <link rel="stylesheet" href="css/kina.css">
 </head>
 
 
 <body class="body">
-
-
 
 <div class="wrapper">
     <div class="topnav"></div>
