--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
     <!-- CUSTOM STUFF AFTER PLUGINS -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet">
+    <script type="text/javascript" src="js/kina.js"></script>
     <link rel="stylesheet" href="css/kina.css">
 </head>
 
