--- a/index.html
+++ b/index.html
@@ -128,13 +128,15 @@
                  style="cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 600px; overflow: hidden;">
                 <div data-p="225.00" style="display: none;">
                     <a href="#contact-title">
-                        <img data-u="image" src="images/slider/photo1.jpg"/>
+                        <img data-u="image" src="images/slider/slide2a.jpg"/>
                     </a>
                 </div>
-                <!--
+                
                 <div data-p="225.00" data-po="80% 55%" style="display: none;">
-                    <img data-u="image" src="images/slider/photo2.jpg"/>
+                    <img data-u="image" src="images/slider/slide2.jpg"/>
                 </div>
+                
+                <!--
                 <div data-p="225.00" data-po="80% 55%" style="display: none;">
                     <img data-u="image" src="images/slider/photo3.jpg"/>
                 </div>
