--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                 </div>
                 
                 <div data-p="225.00" data-po="80% 55%" style="display: none;">
-                    <img data-u="image" src="images/slider/slide2.jpg"/>
+                    <a href="#contact-title">
+                        <img data-u="image" src="images/slider/slide2.jpg"/>
+                    </a>
                 </div>
                 
                 <!--
