--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
     <div class="block bgblack">
         <a href="https://www.instagram.com/kina.studio/" target="_blank">
-            <img src="images/kinastudio-photographyweb-white.png"/>
+            <img style="max-width: 460px; min-width: 320px; margin: 40px;" src="images/kinastudio-photographyweb-white.png"/>
         </a>
     </div>
 
