--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
     
     
 
-    <div class="block bgblack">
+    <div class="block headline">
         <a href="https://www.instagram.com/kina.studio/" target="_blank">
-            <img style="max-width: 460px; min-width: 320px; margin: 40px;" src="images/kinastudio-photographyweb-white.png"/>
+            <img style="max-width: 460px; min-width: 320px; margin: 40px;" src="images/kinastudio-photographyweb-black.png"/>
         </a>
     </div>
 
