--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
     <div class="block headline">
         <a href="https://www.instagram.com/kina.studio/" target="_blank">
-            <img style="max-width: 460px; min-width: 320px; margin: 40px;" src="images/kinastudio-photographyweb-black.png"/>
+            <img class="photographyweblogo" src="images/kinastudio-photographyweb-black.png"/>
         </a>
     </div>
 
