--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     
     <div class="block header desktop">
-        <img class="logo" src="images/logo-blank-color-2.jpg"/>
+        <img class="logo" src="images/logo-blank-black.png"/>
     </div>
     
 
