--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     -->
     
     <div class="block bgblack header mobile">
-        <img class="logo" src="images/kina-studio-stuttgart-white.jpg"/>
+        <img class="logo" src="images/logo-blank-white.png"/>
     </div>
     
     <div class="block header desktop">
