--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </div>
     
     <div class="block header desktop">
+        <p class="info">📷 Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie</p>
         <img class="logo" src="images/logo-blank-black.png"/>
     </div>
     
