--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     
     <div class="block header desktop">
-        <p style="margin: 5px;">📷 Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
+        <p style="margin: 5px; font-size: 12px;">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
         <img class="logo" src="images/logo-blank-black.png"/>
     </div>
     
