--- a/index.html
+++ b/index.html
@@ -64,24 +64,25 @@
 
     <div class="block">
 
-        <div class="mainnav">
-            <a href="#lifestyle-photography">
-                <h4>FOTOGRAFIE</h4>
-            </a>
-            <a href="#info">
-                <h4>INFO</h4>
-            </a>
-            <a href="#contact">
-                <h4>KONTAKT</h4>
-            </a>
-        </div>
-        
-        <div class="topline">
-            <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank">
-                <h4 class="saletext">Like our facebook page and get 20% off for next shooting!</h4>
-            </a>
-        </div>
+        <div class="mainnav-wrapper">
+            <div class="mainnav">
+                <a href="#lifestyle-photography">
+                    <h4>FOTOGRAFIE</h4>
+                </a>
+                <a href="#info">
+                    <h4>INFO</h4>
+                </a>
+                <a href="#contact">
+                    <h4>KONTAKT</h4>
+                </a>
+            </div>
 
+            <div class="topline">
+                <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank">
+                    <h4 class="saletext">Like our facebook page and get 20% off for next shooting!</h4>
+                </a>
+            </div>
+        </div>
 
         <script type="text/javascript">
             jssor_1_slider_init = function () {
