--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="topline">
                 <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank">
-                    <h4 class="saletext">Like our facebook page and get 20% off for next shooting!</h4>
+                    <h4 class="saletext">Like our facebook page and get 20% off!</h4>
                 </a>
             </div>
         </div>
