--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <div class="block header desktop">
         <p style="font-size: 12px; margin:5px;">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
-        <img class="logo" src="images/kina-logo-black.png"/>
+        <img class="logo" src="images/kinastudio-logo.png"/>
     </div>
     
 
