--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- CUSTOM STUFF BEFORE PLUGINS -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KINA.studio - Fotografie für Fashion, Portrait, Produkte. Luxury Photography for Designer clothing, beauty, fashion, products. Web optimized images for your online business.</title>
+    <title>kina.studio - Fotografie für Fashion, Portrait, Produkte. Luxury Photography for Designer clothing, beauty, fashion, products. Web optimized images for your online business.</title>
     <meta name="description" content="Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten, Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. Darüber hinaus können Sie mit uns in die Welt der Produkt- und Werbevideos einsteigen." />
     <meta name="robots" content="INDEX,FOLLOW" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
