--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <div class="block header desktop">
         <p style="font-size: 12px; margin:5px;">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
-        <img class="logo" src="images/kinastudio-black.png"/>
+        <img class="logo" src="images/kina-desktop-new.jpg"/>
     </div>
     
 
