--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
     <div id="info"></div>
     
     <div class="block headline">
-        <a href="https://www.instagram.com/kina.studio/" target="_blank">KINA STUDIO<br>LIFESTYLE PHOTOGRAPHY</a>
+        <a href="https://www.instagram.com/kina.studio/" target="_blank"><h3>LIFESTYLE PHOTOGRAPHY</h3></a>
+        <a href="https://www.instagram.com/kina.studio/" target="_blank"><h4>@ kina studio</h4></a>
     </div>
     
     <div class="block" style="margin-left:10px;margin-right:10px;">
