--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
         <p class="info">📷  Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
-            Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie.</p>
+            Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie und Weboptimierung.</p>
 
     </div>
     
