--- a/imprint.html
+++ b/imprint.html
@@ -25,11 +25,12 @@
 <div id="start" class="wrapper">
     
     <div class="block bgblack header mobile">
-        <img class="logo" src="images/kina-studio-stuttgart-white.jpg"/>
+        <img class="logo" src="images/kina-white.png"/>
     </div>
     
     <div class="block header desktop">
-        <img class="logo" src="images/kina-studio-stuttgart.png"/>
+        <p style="font-size: 12px; margin:5px;">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
+        <img class="logo" src="images/kina-black.png"/>
     </div>
 
     <div class="block headline">
