--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="icon" href="http://kina.studio/images/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="http://kina.studio/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="http://kina.studio/images/favicon.png" sizes="128x128" />
     
     <meta property="og:type" content="website" />
     <meta property="og:title" content="kina.studio" />
