--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
             </div>
             <div data-u="slides"
                  style="cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 600px; overflow: hidden;">
+                
+                <div data-p="225.00" style="display: none;">
+                    <a href="#contact">
+                        <img data-u="image" src="images/slider/slide1.jpg"/>
+                    </a>
+                </div>
+                
                 <div data-p="225.00" style="display: none;">
                     <a href="#contact">
                         <img data-u="image" src="images/slider/slide2a.jpg"/>
