--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <div class="topline"></div>
 
 
-<p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
+<p style="text-align: center; display: inline;">&copy; 2016-2017 KINA.studio. Stuttgart City.</p>
  | 
 <a class="link" style="padding:10px 0;" href="imprint.html" target="_blank">Impressum</a>
    
