--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     </div>
 
     <div class="block bgblack">
-        <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
+        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
         <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
         <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
     </div>
