--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
 
             <div class="topline">
-                <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank">
-                    <h4 class="saletext">Like our facebook page and get 20% off !</h4>
+                <a href="https://www.instagram.com/kina.studio/" target="_blank">
+                    <h4 class="saletext">Instagram liken & 20% Rabatt erhalten!</h4>
                 </a>
             </div>
         </div>
@@ -263,7 +263,7 @@
 
         <h4>LIFESTYLE. FASHION. BUSINESS.</h4>
         
-        <p class="info">📷  Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
+        <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
@@ -271,7 +271,7 @@
 
         <h4>E-COMMERCE. WEB. PRINT.</h4>
 
-        <p class="info">📷  Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
+        <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
             Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie und Weboptimierung.</p>
 
@@ -306,7 +306,7 @@
             </div>
             <div style="float:right; width:49%; border-left: solid #ccc 1px;">
                 <p class="icon icon-whatsapp"></p>
-                <h4 class="middletext">TELEFON: </h4><p><a href="tel:+49 (176) 874 16 078" data-rel="external">+49 (176) 874 16 078</a></p>
+                <h4 class="middletext">TELEFON: </h4><p><a href="tel:+49 (173) 429 0514" data-rel="external">+49 (173) 429 0514</a></p>
             </div>
         </div>
     </div>
