--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     
     
     <div class="block headline">
-        <h2 class="widetext">FOLLOW US</h2>
+        <h2 class="widetext">FOLLOW</h2>
     </div>
 
     <div class="block bgblack">
@@ -295,7 +295,7 @@
 
     <div id="contact"></div>
     <div class="block headline">
-        <h2 class="widetext">CONTACT</h2>
+        <h2 class="widetext">KONTAKT</h2>
     </div>
 
     <div class="block bgwhite">
@@ -322,7 +322,7 @@
 <div class="topline"></div>
 
 
-<p style="text-align: center; display: inline;">&copy; 2016-2017 KINA.studio. Stuttgart City.</p>
+<p style="text-align: center; display: inline;">&copy; 2009-2017 KINA.studio. Stuttgart City.</p>
  | 
 <a class="link" style="padding:10px 0;" href="imprint.html" target="_blank">Impressum</a>
    
