--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                 <a href="#contact">
                     <h4>KONTAKT</h4>
                 </a>
+                <a href="https://www.instagram.com/kina.studio/" target="_blank" class="desktop">
+                    <h4>INSTAGRAM</h4>
+                </a>
             </div>
 
             <div class="topline">
