--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
     <!-- INSTAGRAM STUFF HERE -->
 
-
+<!--
     <div class="block headline">
         <h2 class="widetext">GET INSPIRED</h2>
     </div>
@@ -225,12 +225,12 @@
             showVideoControls: false
         });
     </script>
+-->
 
 
 
 
 
-<!--
     <div class="block headline">
         <h2 class="widetext">FASHION SHOOTINGS</h2>
     </div>
@@ -245,7 +245,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
-            limit: 9,
+            limit: 6,
             video: true,
             showVideoControls: false
         });
@@ -255,9 +255,8 @@
 
 
 
-
     <div class="block headline">
-        <h2 class="widetext">CLASSIC WEDDING</h2>
+        <h2 class="widetext">CLASSIC EVENT</h2>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-wedding"></div>
@@ -270,12 +269,62 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
-            limit: 9,
+            limit: 6,
             video: true,
             showVideoControls: false
         });
     </script>
--->
+
+
+
+
+
+
+    <div class="block headline">
+        <h2 class="widetext">BUSINESS LOOKS</h2>
+    </div>
+    <div class="block">
+        <div class="instagram-kinastudio-business"></div>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr anzeigen ></a>
+    </div>
+    <script>
+        $('.instagram-kinastudio-business').instagramElement({
+            mode : 'tag',
+            tag : 'kinastudio_business',
+            userID : '2066076364',
+            accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
+            galleryMode: 'classic',
+            limit: 6,
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+
+
+
+
+
+
+    <div class="block headline">
+        <h2 class="widetext">LIFESTYLE PHOTOGRAPHY</h2>
+    </div>
+    <div class="block">
+        <div class="instagram-kinastudio-lifestyle"></div>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr anzeigen ></a>
+    </div>
+    <script>
+        $('.instagram-kinastudio-lifestyle').instagramElement({
+            mode : 'tag',
+            tag : 'kinastudio_lifestyle',
+            userID : '2066076364',
+            accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
+            galleryMode: 'classic',
+            limit: 6,
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+
 
 
 
