--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
-            limit: 6,
+            limit: 9,
             video: true,
             showVideoControls: false
         });
@@ -306,7 +306,7 @@
 
 
     <div class="block headline">
-        <h2 class="widetext">LIFESTYLE PHOTOGRAPHY</h2>
+        <h2 class="widetext">GET INSPIRED</h2>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
