--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
-            limit: 6,
+            limit: 12,
             video: true,
             showVideoControls: false
         });
@@ -269,7 +269,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
-            limit: 9,
+            limit: 12,
             video: true,
             showVideoControls: false
         });
@@ -294,7 +294,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
-            limit: 6,
+            limit: 12,
             video: true,
             showVideoControls: false
         });
@@ -306,7 +306,7 @@
 
 
     <div class="block headline">
-        <h2 class="widetext">GET INSPIRED</h2>
+        <h2 class="widetext">LIFESTYLE</h2>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
@@ -336,7 +336,7 @@
     
     <div class="block headline">
         <a href="https://www.instagram.com/kina.studio/" target="_blank">
-            <h3 class="widetext">LIFESTYLE PHOTOGRAPHY</h3>
+            <h3 class="widetext">PHOTOGRAPHY</h3>
             <h4 class="widetext">by kina studio</h4>
         </a>
     </div>
