--- a/index.html
+++ b/index.html
@@ -251,6 +251,23 @@
         });
     </script>
 
+    <div class="block">
+        <div class="instagram-kinastudio-menfashion"></div>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_menfashion/" target="_blank">Mehr anzeigen ></a>
+    </div>
+    <script>
+        $('.instagram-kinastudio-menfashion').instagramElement({
+            mode : 'tag',
+            tag : 'kinastudio_menfashion',
+            userID : '2066076364',
+            accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
+            galleryMode: 'classic',
+            limit: 12,
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+
 
 
 
