--- a/index.html
+++ b/index.html
@@ -69,18 +69,35 @@
 
         <div class="mainnav-wrapper">
             <div class="mainnav">
-                <a href="#lifestyle-photography">
+
+                <a href="#lifestyle-photography" class="mobile-inline">
                     <h4>FOTOGRAFIE</h4>
                 </a>
+
+				<a href="#nav-fashion" class="desktop">
+                    <h4>FASHION</h4>
+                </a>
+
+				<a href="#nav-events" class="desktop">
+                    <h4>HOCHZEIT</h4>
+                </a>
+
+				<a href="#nav-business" class="desktop">
+                    <h4>BUSINESS</h4>
+                </a>
+
+				<a href="#nav-lifestyle" class="desktop">
+                    <h4>LIFESTYLE</h4>
+                </a>
+
                 <a href="#info">
                     <h4>INFO</h4>
                 </a>
+
                 <a href="#contact">
                     <h4>KONTAKT</h4>
                 </a>
-                <a href="https://www.instagram.com/kina.studio/" target="_blank" class="desktop">
-                    <h4>INSTAGRAM</h4>
-                </a>
+
             </div>
 
             <div class="topline">
@@ -228,8 +245,7 @@
 -->
 
 
-
-
+	<div id="nav-fashion"></div>
 
     <div class="block headline">
         <h2 class="widetext">FASHION SHOOTINGS</h2>
@@ -272,7 +288,7 @@
 -->
 
 
-
+	<div id="nav-events"></div>
 
     <div class="block headline">
         <h2 class="widetext">CLASSIC EVENT</h2>
@@ -297,7 +313,7 @@
 
 
 
-
+    <div id="nav-business"></div>
 
     <div class="block headline">
         <h2 class="widetext">BUSINESS LOOKS</h2>
@@ -322,7 +338,7 @@
 
 
 
-
+    <div id="nav-lifestyle"></div>
 
     <div class="block headline">
         <h2 class="widetext">LIFESTYLE</h2>
