--- a/imprint.html
+++ b/imprint.html
@@ -41,18 +41,18 @@
 
 
 <h2>Angaben gemäß § 5 TMG:</h2>
-<p>Kyryl (Kikko) Nadobnykh<br />
+<p>Kyryl Nadobnykh<br />
 KINA.studio<br />
-Holderäckerstr. 10<br />
-70499 Stuttgart
+Pappelweg. 4<br />
+71229 Leonberg
 </p>
 <h2>Kontakt:</h2>
 <p>Telefon:+4917687416078</p>
 <p>E-Mail: info@kina.studio</p>
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
-<p>Kyryl (Kikko) Nadobnykh<br />
-Holderäckerstr. 10<br />
-70499 Stuttgart</p>
+<p>Kyryl Nadobnykh<br />
+Pappelweg. 4<br />
+71229 Leonberg</p>
 <p> </p>
 <p>Quelle: <em><a href="https://www.e-recht24.de/artikel/datenschutz/209.html">https://www.e-recht24.de</a></em></p>
 
