--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="mainnav-wrapper">
             <div class="mainnav">
 
-                <a href="#lifestyle-photography" class="mobile-inline">
-                    FOTOGRAFIE
+                <a href="#nav-fashion" class="mobile-inline">
+                    PORTFOLIO
                 </a>
 
 				<a href="#nav-fashion" class="desktop">
@@ -237,7 +237,7 @@
 	<div id="nav-fashion"></div>
 
     <div class="block headline">
-        <h2 class="widetext">FASHION SHOOTINGS</h2>
+        <h2 class="widetext">MODEL SHOOTINGS</h2>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
