--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		        <img class="logo" src="images/kina-white.png"/>
 		    </div>
             <div class="mainnav">
-				<a href="#nav-fashion" class="desktop">FASHION</a>
+				<a href="#nav-fashion" class="desktop">FASHIONABLE</a>
 				<a href="#nav-events" class="desktop">HOCHZEIT</a>
 				<a href="#nav-business" class="desktop">BUSINESS</a>
 				<a href="#nav-lifestyle" class="desktop">LIFESTYLE</a>
@@ -80,7 +80,7 @@
             </div>
             <div class="topline">
                 <a href="https://www.instagram.com/kina.studio/" target="_blank">
-                    <h4 class="saletext">Instagram liken & 20% Rabatt sichern!</h4>
+                    <h4 class="saletext">Auf Instagram folgen & 20% Rabatt sichern!</h4>
                 </a>
             </div>
         </div>
@@ -215,7 +215,7 @@
 	<div id="nav-fashion"></div>
 
     <div class="block headline">
-        <h2 class="widetext">MODEL SHOOTINGS</h2>
+        <h2 class="widetext">FASHIONABLE</h2>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
