--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		        <img class="logo" src="images/kina-white.png"/>
 		    </div>
             <div class="mainnav">
-				<a href="#nav-fashion" class="desktop">FASHIONABLE</a>
+				<a href="#nav-fashion" class="desktop">FASHION</a>
 				<a href="#nav-events" class="desktop">HOCHZEIT</a>
 				<a href="#nav-business" class="desktop">BUSINESS</a>
 				<a href="#nav-lifestyle" class="desktop">LIFESTYLE</a>
@@ -215,7 +215,7 @@
 	<div id="nav-fashion"></div>
 
     <div class="block headline">
-        <h2 class="widetext">FASHIONABLE</h2>
+        <h2 class="widetext">FASHION SHOOTINGS</h2>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
