--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
     <script type="text/javascript" src="instagram/lib/videoplayer/js/mediaelement-and-player.min.js"></script>
-    <script type="text/javascript" src="instagram/lib/fancybox2/source/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="fancybox3/jquery.fancybox.js"></script>
     <script type="text/javascript" src="instagram/lib/dateFormat.js"></script>
     <script type="text/javascript" src="instagram/lib/easing.js"></script>
     <script type="text/javascript" src="instagram/instagramElement.js"></script>
     
     <link rel="stylesheet" href="instagram/lib/videoplayer/css/style.css" media="screen">
-    <link rel="stylesheet" href="instagram/lib/fancybox2/source/jquery.fancybox.css">
+    <link rel="stylesheet" href="fancybox3/jquery.fancybox.css">
     <link rel="stylesheet" href="instagram/instagramElement.css">
 
     <!-- SLIDER STUFF -->
