--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr anzeigen ></a>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr auf Instagram ></a>
     </div>
     <script>
         $('.instagram-kinastudio-fashion').instagramElement({
@@ -262,7 +262,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-wedding"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr anzeigen ></a>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr auf Instagram ></a>
     </div>
     <script>
         $('.instagram-kinastudio-wedding').instagramElement({
@@ -287,7 +287,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-business"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr anzeigen ></a>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr auf Instagram ></a>
     </div>
     <script>
         $('.instagram-kinastudio-business').instagramElement({
@@ -312,7 +312,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr anzeigen ></a>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr auf Instagram ></a>
     </div>
     <script>
         $('.instagram-kinastudio-lifestyle').instagramElement({
