--- a/index.html
+++ b/index.html
@@ -187,30 +187,6 @@
 
     <!-- INSTAGRAM STUFF HERE -->
 
-<!--
-    <div class="block headline">
-        <h2 class="widetext">GET INSPIRED</h2>
-    </div>
-
-
-    <div class="block">
-        <div class="instagram-kinastudio-inspire"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_inspire/" target="_blank">Show on Instagram ></a>
-    </div>
-    <script>
-        $('.instagram-kinastudio-inspire').instagramElement({
-            mode : 'tag',
-            tag : 'kinastudio_inspire',
-            userID : '2066076364',
-            accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-            galleryMode: 'classic',
-            limit: 18,
-            video: true,
-            showVideoControls: false
-        });
-    </script>
--->
-
 
 	<div id="nav-fashion"></div>
 
@@ -234,25 +210,7 @@
         });
     </script>
 
-    
-<!--
-    <div class="block">
-        <div class="instagram-kinastudio-mensfashion"></div>
-        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_mensfashion/" target="_blank">Mehr anzeigen ></a>
-    </div>
-    <script>
-        $('.instagram-kinastudio-mensfashion').instagramElement({
-            mode : 'tag',
-            tag : 'kinastudio_mensfashion',
-            userID : '2066076364',
-            accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-            galleryMode: 'classic',
-            limit: 12,
-            video: true,
-            showVideoControls: false
-        });
-    </script>
--->
+
 
 
 	<div id="nav-events"></div>
@@ -381,7 +339,7 @@
         <h2 class="widetext">KONTAKT</h2>
     </div>
 
-    <div class="block bgwhite">
+    <div class="">
         <div class="contacts">
             <div style="float:left; width:49%">
                 <p class="icon icon-mail"></p>
