--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <h2 class="widetext">KONTAKT</h2>
     </div>
 
-    <div class="">
+    <div>
         <div class="contacts">
             <div style="float:left; width:49%">
                 <p class="icon icon-mail"></p>
@@ -362,10 +362,10 @@
 
 <div class="topline"></div>
 
-
-<p style="text-align: center; display: inline;">&copy; 2009-2017 KINA.studio. Stuttgart City.</p>
- | 
-<a class="link" style="padding:10px 0;" href="imprint.html" target="_blank">Impressum</a>
+<div class="block">
+	<a class="link" href="imprint.html" target="_blank">Impressum // Imprint</a>
+	<p style="text-align: center;">&copy; 2009-2017 KINA.studio. Stuttgart city.</p>
+</div>
    
 <div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
