--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
                 <a href="#info" class="desktop">INFO</a>
                 <a href="#contact" class="desktop">KONTAKT</a>
             </div>
+            <!--
             <div class="topline">
                 <a href="https://www.instagram.com/kina.studio/" target="_blank">
                     <p class="saletext">Auf Instagram folgen & 20% Rabatt sichern!</p>
                 </a>
             </div>
+            -->
         </div>
 
 
@@ -190,9 +192,12 @@
 
 	<div id="nav-fashion"></div>
 
+<!--
     <div class="headline">
-        <h2 class="widetext">FASHION SHOOTINGS</h2>
+        <h2 class="widetext">FASHION</h2>
     </div>
+    -->
+
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
         <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr auf Instagram ></a>
