--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                 
                 <div data-p="225.00" style="display: none;">
                     <a href="#nav-fashion">
-                        <img data-u="image" src="images/slider/spring.jpg"/>
+                        <img data-u="image" src="slides/spring.jpg"/>
                     </a>
                 </div>
                 <!--
                 <div data-p="225.00" style="display: none;">
                     <a href="#contact">
-                        <img data-u="image" src="images/slider/slide2a.jpg"/>
+                        <img data-u="image" src="slides/slide2a.jpg"/>
                     </a>
                 </div>
                 -->
