--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <a href="#start"><img class="logo" src="images/kina-white.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#nav-fashion" class="desktop">FASHION & BEAUTY</a>
-            <a href="#nav-business" class="desktop">BUSINESS</a>
-            <a href="#nav-events" class="desktop">HOCHZEIT</a>
-            <a href="#nav-lifestyle" class="desktop">LIFESTYLE</a>
-            <a href="#info" class="desktop">INFO</a>
-            <a href="#contact" class="desktop">KONTAKT</a>
+            <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
+            <a href="#nav-business" class="">BUSINESS</a>
+            <a href="#nav-events" class="">HOCHZEIT</a>
+            <a href="#nav-lifestyle" class="">LIFESTYLE</a>
+            <a href="#info" class="">INFO</a>
+            <a href="#contact" class="">KONTAKT</a>
         </div>
 
         <div class="topline">
