--- a/index.html
+++ b/index.html
@@ -90,9 +90,22 @@
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-fashion">
+                    <img data-u="image" src="slides/slide1.jpg"/>
+                </a>
+            </div>
+
+            <div data-p="225.00" style="display: none;">
+                <a href="#nav-business">
+                    <img data-u="image" src="slides/slide2.jpg"/>
+                </a>
+            </div>
+
+            <div data-p="225.00" style="display: none;">
+                <a href="#nav-fashion">
                     <img data-u="image" src="slides/spring.jpg"/>
                 </a>
             </div>
+            
             <!--
             <div data-p="225.00" style="display: none;">
                 <a href="#contact">
