--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
             <div style="float:left; width:49%">
                 <p class="icon icon-mail"></p>
                 <h4 class="middletext">EMAIL: </h4>
-                <p><a href="mailto:info@kina.studio">info@kina.studio</a></p>
+                <p class="biggertext"><a href="mailto:info@kina.studio">info@kina.studio</a></p>
             </div>
             <div style="float:right; width:49%; border-left: solid #ccc 1px;">
                 <p class="icon icon-whatsapp"></p>
                 <h4 class="middletext">TELEFON: </h4>
-                <p><a href="tel:+49 (173) 429 0514" data-rel="external">+49 (173) 429 0514</a></p>
+                <p class="biggertext"><a href="tel:+49 (173) 429 0514" data-rel="external">+49 (173) 429 0514</a></p>
             </div>
         </div>
     </div>
