new font for h1 + h2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <script src="slider/js/jssor.slider-21.1.6.min.js" type="text/javascript"></script>
 
     <!-- CUSTOM STUFF AFTER PLUGINS -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet">
+
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
+
     <script type="text/javascript" src="js/kina.js"></script>
     <link rel="stylesheet" href="css/kina.css">
 </head>
