--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
-            <a class="mobilemenuicon" href="">MENU</a>
+            <a class="mobilemenuicon" href="">= MENU</a>
             <a href="#start"><img class="logo" src="images/kina-white.png"/></a>
         </div>
         <div class="mainnav">
