--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 
     <div class="mainnav-wrapper">
-        <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
+        <div class="logo-wrapper logo-wrapper-mobile block bgwhite transp header mobile">
             <a class="mobilemenuicon" href="">= MENU</a>
-            <a href="#start"><img class="logo" src="images/kina-white.png"/></a>
+            <a href="#start"><img class="logo" src="images/kina-black.png"/></a>
         </div>
         <div class="mainnav">
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
