--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="start" class="wrapper">
 
     <p class="welcomerow desktop">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
-    <p class="cookiesrow">kina.studio verwendet Cookies. <a href="">Mehr erfahren</a></p>
+    <p class="cookiesrow">kina.studio verwendet Cookies. <a href="imprint.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="closeCookieWindow">X</span></p>
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
         <img class="logo" src="images/kina-black.png"/>
@@ -321,7 +321,7 @@
     <div class="topline"></div>
 
     <div class="block">
-        <a class="link" href="imprint.html" target="_blank">Impressum / imprint</a>
+        <a class="link" href="imprint.html" target="_blank">Impressum // imprint</a>
         <p style="text-align: center;">&copy; 2009-2017 KINA.studio. Stuttgart city.</p>
     </div>
 </div>
