--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="start" class="wrapper">
 
     <p class="welcomerow desktop">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
-    <p class="cookiesrow">kina.studio verwendet Cookies. <a href="imprint.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="closeCookieWindow">X</span></p>
+    <p class="cookiesrow">kina.studio verwendet Cookies. <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="closeCookieWindow">X</span></p>
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
         <img class="logo" src="images/kina-black.png"/>
