impros css + project structure

--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-fashion">
-                    <img data-u="image" src="slides/slide1.jpg"/>
+                    <img data-u="image" src="photos/slides/01.jpg"/>
                 </a>
             </div>
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-business">
-                    <img data-u="image" src="slides/slide2.jpg"/>
+                    <img data-u="image" src="photos/slides/02.jpg"/>
                 </a>
             </div>
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-fashion">
-                    <img data-u="image" src="slides/spring.jpg"/>
+                    <img data-u="image" src="photos/slides/03.jpg"/>
                 </a>
             </div>
             
             <!--
             <div data-p="225.00" style="display: none;">
                 <a href="#contact">
-                    <img data-u="image" src="slides/slide2a.jpg"/>
+                    <img data-u="image" src="photos/slides/04.jpg"/>
                 </a>
             </div>
             -->
