--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 <div id="start" class="wrapper">
 
     <p class="welcomerow desktop">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
-    <p class="cookiesrow">kina.studio verwendet Cookies. <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="closeCookieWindow">X</span></p>
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
         <img class="logo" src="images/kina-black.png"/>
@@ -327,8 +326,8 @@
 </div>
 
 
+<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a></p>
 
-
-<div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
+<div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
 </html>
