--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 
     <div class="headline">
         <h2 class="widetext">FASHION & BEAUTY</h2>
+        <h4 class="widetext">GET INSPIRED</h4>
     </div>
 
     <div class="block">
@@ -185,7 +186,8 @@
     <div id="nav-business"></div>
 
     <div class="headline">
-        <h2 class="widetext">BUSINESS LOOKS</h2>
+        <h2 class="widetext">BUSINESS</h2>
+        <h4 class="widetext">LOOKS FÜR'S GESCHÄFT</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-business"></div>
@@ -209,7 +211,8 @@
     <div id="nav-events"></div>
 
     <div class="headline">
-        <h2 class="widetext">CLASSIC EVENT</h2>
+        <h2 class="widetext">HOCHZEIT</h2>
+        <h4 class="widetext">CLASSIC EVENT</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-wedding"></div>
@@ -258,7 +261,7 @@
 
     <div class="headline">
         <a href="https://www.instagram.com/kina.studio/" target="_blank">
-            <h3 class="widetext">PHOTOGRAPHY</h3>
+            <h2 class="widetext">PHOTOGRAPHY</h2>
             <h4 class="widetext">by kina studio</h4>
         </a>
     </div>
