--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
     <div id="nav-business"></div>
 
     <div class="headline">
-        <h2 class="widetext">BUSINESS</h2>
-        <h4 class="widetext">LOOKS FÜR'S GESCHÄFT</h4>
+        <h2 class="widetext">BUSINESS LOOKS</h2>
+        <h4 class="widetext">LIFESTYLE IM GESCHÄFT</h4>
     </div>
     <div class="block">
         <div class="instagram-kinastudio-business"></div>
@@ -260,10 +260,8 @@
     <div id="info"></div>
 
     <div class="headline">
-        <a href="https://www.instagram.com/kina.studio/" target="_blank">
-            <h2 class="widetext">PHOTOGRAPHY</h2>
-            <h4 class="widetext">by kina studio</h4>
-        </a>
+        <h2 class="widetext">PHOTOGRAPHY</h2>
+        <h4 class="widetext">by kina studio</h4>
     </div>
 
     <div class="block" style="margin-left:10px;margin-right:10px;">
