--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
         <img class="logo" src="images/kina-black.png"/>
+        <!--<h1 class="widetext">K I N A S T U D I O</h1>-->
+
     </div>
 
 
