--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <a href="#start"><img class="logo" src="images/kina-black.png"/></a>
         </div>
         <div class="mainnav">
+            <!--<a href="#start"><img class="menulogo" src="images/kina-black.png"/></a>-->
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS</a>
             <a href="#nav-events" class="">HOCHZEIT</a>
