black template fix

--- a/black.html
+++ b/black.html
@@ -255,17 +255,6 @@
     </div>
 
 
-    <div class="block headline">
-        <h2 class="widetext">FOLLOW</h2>
-    </div>
-
-    <div class="block bgblack">
-        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton"
-                                                                                src="images/facebook-white.png"/></a>
-        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton"
-                                                                              src="images/instagram-white.png"/></a>
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
-    </div>
 
 
     <div id="contact"></div>
@@ -288,6 +277,15 @@
         </div>
     </div>
 
+    <div class="block bgblack">
+        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
+        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
+        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
+    </div>
+
+
+
+
     <div class="topline"></div>
 
     <div class="block">
@@ -298,7 +296,7 @@
 </div>
 
 
-<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">OK</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="link" href="imprint.html" target="_blank">Impressum</a></p>
+<p class="cookiesrow">kina.studio verwendet Cookies. <br> <a href="privacy.html" class="informedAboutCookies" target="_blank">Mehr erfahren</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="closeCookieWindow">Einverstanden</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="link" href="imprint.html" target="_blank">Impressum</a></p>
 
 <div class=""><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
